--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,6 +22,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 main {
@@ -35,6 +36,7 @@ main {
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
+    z-index: 1;
 }
 
 .star-container {
@@ -102,4 +104,13 @@ button:hover {
     color: var(--cor6);
     background-color: var(--cor1);
     cursor: pointer;
+}
+
+.submit {
+    width: 400px;
+    height: 400px;
+    padding: 35px;
+    background-color: var(--cor4);
+    border-radius: 25px;
+    box-shadow: rgb(26, 26, 26) 0px 0px 10px;
 }
