adicionando responsividade no projeto e um README

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -171,3 +171,54 @@ main.animar {
         opacity: 0;
     }
 }
+
+@media (min-width: 375px) {
+    main {
+        height: 270px;
+        width: 270px;
+        padding: 25px;
+        border-radius: 20px;
+    }
+
+    .star-container {
+        width: 35px;
+        height: 35px;
+        border-radius: 50%;
+    }
+
+    h1 {
+        font-size: 1.8rem;
+        margin-bottom: 15px;
+    }
+    
+    p {
+        font-size: .9rem;
+    }
+
+    input {
+        width: 40px;
+        height: 40px;
+        margin: 10px;
+        border-radius: 50%;
+    }
+
+    button {
+        width: 270px;
+        height: 40px;
+        font-size: 15px;
+    }
+
+    .after-submit img {
+        height: 35%;
+        margin-bottom: 25px;
+    }
+
+    .after-submit span {
+        margin-bottom: 20px;
+    }
+
+    .after-submit h1 {
+        font-size: 1.5rem;
+        margin-bottom: 10px;
+    }
+}
